fix scrolling of new seed form on mobile

--- a/src/css/mixins.less
+++ b/src/css/mixins.less
@@ -245,11 +245,9 @@
   vertical-align: middle;
   @media (max-width: @screen-xs-max) {
     font-size: 28px;
-    height: 40px;
-    line-height: 40px;
     width: 40px;
     margin-right: -12px;
-    margin-top: 8px;
+    margin-top: 0;
   }
 }
 
